<resources>
    <string name="app_name">Liao</string>
    <string name="action_github_login">登录 CSDN帐号</string>
    <string name="action_github_trending">今日 GitHub 热门</string>
    <string name="action_notifiable">每天中午提醒</string>
    <string name="action_about">「关于」</string>
    <string name="tip_guide">指引: 点击卡片的标题文字，可以打开干货页面 :)</string>
    <string name="i_konw">我知道了</string>
    <string name="snap_load_fail">加载失败，请重试</string>
    <string name="retry">重试</string>
    <string name="notifiable_on">已经开启提醒</string>
    <string name="notifiable_off">已经关闭提醒</string>
    <string name="tip_login_github"> App 并无帐号系统，这个菜单只是提前登录保留 cookies，以便于之后进 GitHub 页面 star 项目</string>
    <!--<string name="url_login_github">https://github.com/login</string>-->
    <string name="url_login_github">https://passport.csdn.net/account/login?ref=toolbar</string>
    <!--<string name="url_login_github">http://202.192.143.243/(slyysl55cdgqmp55sa0cswad)/default2.aspx</string>-->
    <string name="action_refresh">刷新</string>
    <string name="action_copy_url">复制链接</string>
    <string name="action_open_url">打开链接</string>
    <string name="tip_copy_done">复制成功</string>
    <string name="tip_open_fail">打开失败，没有找到可以打开该链接的其它应用 :(</string>

    <string name="url_github_trending">https://github.com/trending</string>
    <string name="app_name_with_introduce">程序猿的骄傲和喜悦</string>
    <string name="introduce_and_help">介绍与帮助</string>
    <string name="introduce">该项目主要用于扎实自身技能、掌握Material Design控件和主流框架的使用。项目主要使用到的框架有SwipeBack,jiecaoVideoPlayer,retrofit等。</string>
    <string name="developers">开发人员</string>
    <string name="developer_and_designer">主要 Android 开发 &amp; 设计</string>
    <string name="open_source_lis">用到的开源库（后续会补充协议）</string>
    <string name="open_source_libraries_list">LiteOrm\nheadsupcompat\nsmooth-app-bar-layout\ncom.android.support:appcompat-v7:22.2.1\ncom.android.support:recyclerview-v7:22.2.1\ncom.squareup.picasso:picasso:2.5.2\ncom.android.support:design:22.2.1\ncom.github.chrisbanes.photoview:library:1.2.3\ncom.daimajia.numberprogressbar:library:1.2@aar\ncom.umeng.analytics:analytics:latest.integration\ncom.squareup.retrofit:retrofit:1.9.0\nio.reactivex:rxandroid:1.0.0\ncom.squareup.okhttp:okhttp-urlconnection:2.0.0\ncom.squareup.okhttp:okhttp:2.0.0\ncom.jakewharton:butterknife:7.0.1\ncom.squareup:otto:1.3.8\ncom.github.bumptech.glide:glide:3.6.1"</string>
    <string name="share">分享给朋友（谢谢QAQ</string>
    <string name="action_share">分享</string>
    <string name="share_text"><![CDATA[发现了一款非常美观的App「妹纸&amp;gank.io」，每天一张精选妹纸图、一个精选小视频（视频源地址播放），一篇程序猿干货，完全开源不收费，太赞了! 推荐~：http://fir.im/mengmeizhi]]></string>
    <string name="ask_saving_picture">保存到手机?</string>
    <string name="picture_has_save_to">图片已保存至 %s 文件夹</string>
    <string name="tip_empty_gank">今日は肥皂家がない、干物の供給がない...\\n今天编辑们休息哦，没有干货提供！\\n如果想在此处展示您的优秀作品，请联系 drakeet.\\n\\n如果你喜欢我开发的应用，\\n你还可以试试同样用心的 App：\\n\\n纯纯打码 http://fir.im/puremosaic\\n验证码助手 http://fir.im/codehelper\\n贝壳单词 http://fir.im/seashell</string>
    <string name="tip_video_play">这其实是个网页浏览器，需要你手动点击页面中的视频进行播放。魅族用户可以上滑 home 键来返回竖屏页面</string>

</resources>
