<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_login"
        android:title="@string/action_github_login"
        android:orderInCategory="1"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_trending"
        android:title="@string/action_github_trending"
        android:orderInCategory="2"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_notifiable"
        android:title="@string/action_notifiable"
        android:orderInCategory="3"
        android:checkable="true"
        android:checked="true"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="4"
        app:showAsAction="never"
        />
</menu>